--- a/frontend/unity-spa/features/registrar/enlistment/enlistment.html
+++ b/frontend/unity-spa/features/registrar/enlistment/enlistment.html
@@ -39,7 +39,8 @@
         <option value="continuing">Continuing</option>
         <option value="new">New</option>
         <option value="returnee">Returnee</option>
-        <option value="transfer">Transfer</option>
+        <option value="transfer">Transferee</option>
+        <option value="acadres">Academic Residency</option>        
       </select>
     </div>
     <div>
