--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -205,6 +205,8 @@
   <!-- Registrar/Finance/Scholarship placeholders -->
   <script src="features/registrar/reports.service.js"></script>
   <script src="features/registrar/reports.controller.js"></script>
+  <!-- Registrar: Transcripts/Copy of Grades page -->
+  <script src="features/registrar/transcripts/transcripts.controller.js"></script>
   <!-- Daily Enrollment (SPA) -->
   <script src="features/registrar/daily-enrollment.service.js"></script>
   <script src="features/registrar/daily-enrollment.controller.js"></script>
