--- a/frontend/unity-spa/features/campuses/campus-edit.html
+++ b/frontend/unity-spa/features/campuses/campus-edit.html
@@ -45,6 +45,17 @@
       </div>
 
       <div>
+        <label class="block text-sm font-medium text-gray-700 mb-1">Address</label>
+        <textarea
+          name="address"
+          rows="2"
+          class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 text-sm"
+          placeholder="Optional address"
+          ng-model="vm.model.address"
+          ng-disabled="vm.loading"></textarea>
+      </div>
+
+      <div>
         <label class="block text-sm font-medium text-gray-700 mb-1">Status</label>
         <select
           name="status"
