--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -227,6 +227,10 @@
   <script src="features/finance/debit-credit/debit-credit.service.js"></script>
   <script src="features/finance/debit-credit/debit-credit.controller.js"></script>
 
+  <!-- Finance: Payment Actions -->
+  <script src="features/finance/payment-actions/payment-actions.service.js"></script>
+  <script src="features/finance/payment-actions/payment-actions.controller.js"></script>
+
   <script src="features/scholarship/students.controller.js"></script>
   <script src="features/scholarship/scholarships/scholarships.service.js"></script>
   <script src="features/scholarship/scholarships/scholarships.controller.js"></script>
