feat(finance): add payment actions page with search and management functionality
- Implemented payment actions HTML with filters for OR number, Invoice number, Student number, Term, and Status.
- Added results table to display payment records with options to Void or Retract payments.
- Integrated loading overlay for better user experience during data fetching.
- Created FinancePaymentActionsService for handling API interactions related to payment actions.

feat(transcripts): create registrar transcripts management interface

- Developed transcripts controller to manage student selection, term loading, and transcript generation.
- Implemented HTML structure for generating transcripts with student search, term selection, and form fields.
- Added history section to display previously generated transcripts with reprint functionality.
- Included error handling and loading states for improved user feedback.

--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -205,6 +205,8 @@
   <!-- Registrar/Finance/Scholarship placeholders -->
   <script src="features/registrar/reports.service.js"></script>
   <script src="features/registrar/reports.controller.js"></script>
+  <!-- Registrar: Transcripts/Copy of Grades page -->
+  <script src="features/registrar/transcripts/transcripts.controller.js"></script>
   <!-- Daily Enrollment (SPA) -->
   <script src="features/registrar/daily-enrollment.service.js"></script>
   <script src="features/registrar/daily-enrollment.controller.js"></script>
@@ -224,6 +226,10 @@
   <!-- Finance: Debit / Credit -->
   <script src="features/finance/debit-credit/debit-credit.service.js"></script>
   <script src="features/finance/debit-credit/debit-credit.controller.js"></script>
+
+  <!-- Finance: Payment Actions -->
+  <script src="features/finance/payment-actions/payment-actions.service.js"></script>
+  <script src="features/finance/payment-actions/payment-actions.controller.js"></script>
 
   <script src="features/scholarship/students.controller.js"></script>
   <script src="features/scholarship/scholarships/scholarships.service.js"></script>
@@ -311,6 +317,10 @@
   <!-- Academics: Faculty Loading -->
   <script src="features/academics/faculty-loading/faculty-loading.service.js"></script>
   <script src="features/academics/faculty-loading/faculty-loading.controller.js"></script>
+  <script src="features/academics/faculty-loading/by-faculty.controller.js"></script>
+  <!-- Academics: Grading Sheet -->
+  <script src="features/academics/grading-sheet/grading-sheet.service.js"></script>
+  <script src="features/academics/grading-sheet/grading-sheet.controller.js"></script>
 
   <!-- Tuition Years feature (Finance) -->
   <script src="features/tuition-years/tuition-years.service.js"></script>
