--- a/frontend/unity-spa/features/registrar/reports.html
+++ b/frontend/unity-spa/features/registrar/reports.html
@@ -1,13 +1,10 @@
 <div class="max-w-6xl mx-auto px-4 py-8">
   <div class="flex items-start justify-between mb-6">
     <div>
-      <h2 class="text-2xl font-semibold text-gray-800">{{ vm.title }}</h2>
-      <p class="text-gray-600">
-        This section is being migrated from the legacy system. Use the shortcuts below to open the current Registrar pages.
-      </p>
+      <h2 class="text-2xl font-semibold text-gray-800">{{ vm.title }}</h2>      
     </div>
     <a class="inline-flex items-center px-3 py-2 rounded bg-blue-600 text-white hover:bg-blue-700"
-       ng-href="{{ vm.nav && vm.nav.dashboard || '#!/dashboard' }}">
+       ng-href="{{ vm.nav && vm.nav.dashboard || '#/dashboard' }}">
       <span class="fas fa-home mr-2"></span> Back to Dashboard
     </a>
   </div>
@@ -18,8 +15,8 @@
       <div class="flex flex-wrap gap-3 items-center">        
         <!-- SPA Daily Enrollment link -->
         <a class="inline-flex items-center px-3 py-2 rounded bg-purple-600 text-white hover:bg-purple-700"
-           ng-href="#!/registrar/daily-enrollment">
-          <span class="fas fa-chart-bar mr-2"></span> Open Daily Enrollment (SPA)
+           ng-href="#/registrar/daily-enrollment">
+          <span class="fas fa-chart-bar mr-2"></span> Open Daily Enrollment
         </a>
         <!-- Divider -->
         <span class="text-gray-300">|</span>
@@ -39,6 +36,22 @@
           </span>
         </button>
 
+        <!-- Enrollment Statistics PDF -->
+        <button type="button"
+                class="inline-flex items-center px-3 py-2 rounded bg-green-600 text-white hover:bg-green-700 disabled:opacity-60"
+                ng-click="vm.exportEnrollmentStatsPdf()"
+                ng-disabled="vm.loadingStats">
+          <span class="fas fa-file-pdf mr-2"></span>
+          <span ng-if="!vm.loadingStats">Enrollment Statistics PDF</span>
+          <span ng-if="vm.loadingStats" class="inline-flex items-center">
+            <svg class="animate-spin h-4 w-4 mr-2 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+              <circle class="opacity-30" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+              <path class="opacity-90" fill="currentColor" d="M4 12a8 8 0 018-8v4A4 4 0 008 12H4z"></path>
+            </svg>
+            Generating...
+          </span>
+        </button>
+
         <!-- Selected term indicator -->
         <span class="text-sm text-gray-600" ng-if="vm.selectedTerm">
           Term: {{ vm.selectedTerm.enumSem }} {{ vm.selectedTerm.term_label }} {{ vm.selectedTerm.strYearStart }}-{{ vm.selectedTerm.strYearEnd }}
@@ -51,11 +64,6 @@
           <span class="fas fa-exclamation-triangle mr-2"></span>{{ vm.error }}
         </div>
       </div>
-    </div>
-
-    <div class="p-6">
-      <h3 class="text-lg font-semibold text-gray-800 mb-2">Other Registrar Tools</h3>
-      <p class="text-gray-600">Additional tools will appear here as they are migrated.</p>
     </div>
   </div>
 </div>
