--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -363,6 +363,10 @@
   <!-- Registrar: Credit Subjects -->
   <script src="features/registrar/credit-subjects/credit-subjects.service.js"></script>
   <script src="features/registrar/credit-subjects/credit-subjects.controller.js"></script>
+
+  <!-- Clinic & Health Records -->
+  <script src="features/clinic/clinic.service.js"></script>
+  <script src="features/clinic/clinic.controller.js"></script>
 </head>
 <body class="bg-gray-50 min-h-screen">
   <!-- Global header (hidden on public upload pages) -->
